--- a/android/testData/projects/manifestConflict/attribute/mylib/AndroidManifest.xml
+++ b/android/testData/projects/manifestConflict/attribute/mylib/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
   <uses-permission android:name="android.permission.CAMERA" />
 
-  <application android:label="@string/lib_name" >
+  <application android:label="Lib Name" >
     <activity
         android:name=".LibActivity" />
   </application>
