--- a/android/testData/projects/moduleInfo/manifestMerger/AndroidManifest.xml
+++ b/android/testData/projects/moduleInfo/manifestMerger/AndroidManifest.xml
@@ -5,10 +5,10 @@
 
   <application
       android:allowBackup="true"
-      android:label="@string/app_name">
+      android:label="App Name">
     <activity
         android:name="${activityName}"
-        android:label="@string/app_name" >
+        android:label="App Name" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
