--- a/android/testData/guiTests/SimpleApplication/app/build.gradle
+++ b/android/testData/guiTests/SimpleApplication/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.guava:guava:18.0'
     compile 'com.android.support.constraint:constraint-layout:+'
+    testCompile 'junit:junit:4.+'
 }
