Run simpleperf report-sample commands on the host
We used to run simpleperf report-sample commands on the device, right after
running simpleperf record. There are a couple of problems with that:
  1) We were consuming unnecessary resources on the device, which is usually
     more limited than the host in that sense
  2) It's usually faster to run the report-sample command on the host
  3) By running it on the host, we can allow users to specify a location of
     the symbols files, providing a way to recover callstack symbols when
     simpleperf record can't find them. This was not possible on the device
     because usually symbols are stripped to make the APK smaller.

The change is made under a flag, disabled by default.

Bug: 117758275
Test: Added some tests to CpuProfilerStageTest:
      * traceNotPreProcessedWhenFlagDisabled,
      * traceIsPreProcessedWhenFlagEnabled, and
      * traceNotPreProcessedIfNotSimpleperf
      Also, created SimpleperfSampleReporterTest.

Change-Id: If7314450e3799a03644fffba5226e58949855bad

--- a/profilers/BUILD
+++ b/profilers/BUILD
@@ -8,7 +8,7 @@ iml_module(
     exclude = ["testSrc/com/android/tools/profilers/performance/DataSeriesPerformanceTest.kt"],
     iml_files = ["intellij.android.profilers.iml"],
     tags = ["no_test_mac_psq"],  # b/113099009
-    test_data = glob(["testData/**"]),
+    test_data = glob(["testData/**"]) + ["//prebuilts/tools:simpleperf"],
     # do not sort: must match IML order
     test_runtime_deps = [
         "//tools/idea/platform/tasks-platform-impl:intellij.platform.tasks.impl",
