--- a/android/resources/messages/AndroidBundle.properties
+++ b/android/resources/messages/AndroidBundle.properties
@@ -824,6 +824,7 @@ android.lint.inspections.unsupported.tv.hardware=Unsupported TV Hardware Feature
 android.lint.inspections.untranslatable=Translated Untranslatable
 android.lint.inspections.unused.attribute=Attribute unused on older versions
 android.lint.inspections.unused.ids=Unused id
+android.lint.inspections.unused.navigation=Unused Navigation
 android.lint.inspections.unused.quantity=Unused quantity translations
 android.lint.inspections.unused.resources=Unused resources
 android.lint.inspections.use.alpha2=Using 3-letter Codes
