[New PSD] Add a dynamic feature to the test project.
Bug: 78887322
Test: n/a
Change-Id: Ibec0c6267fd5b4854003ba10a688dd5d8b812bff

--- a/android/testData/projects/psdSample/app/build.gradle
+++ b/android/testData/projects/psdSample/app/build.gradle
@@ -29,6 +29,8 @@ android {
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
 
+    dynamicFeatures = [":dyn_feature"]
+
     signingConfigs {
         myConfig {
             storeFile file("debug.keystore")
