--- a/android/resources/messages/AndroidBundle.properties
+++ b/android/resources/messages/AndroidBundle.properties
@@ -639,6 +639,7 @@ android.lint.inspections.icon.missing.density.folder=Missing density folder
 android.lint.inspections.icon.mixed.nine.patch=Clashing PNG and 9-PNG files
 android.lint.inspections.icon.no.dpi=Icon appears in both -nodpi and dpi folders
 android.lint.inspections.icon.xml.and.png=Icon is specified both as .xml file and as a bitmap
+android.lint.inspections.ignore.without.reason=@Ignore without Reason
 android.lint.inspections.illegal.resource.ref=Name and version must be integer or string, not resource
 android.lint.inspections.implied.quantity=Implied Quantities
 android.lint.inspections.implied.touchscreen.hardware=Hardware feature touchscreen not explicitly marked as optional
