Fix module dependency so that testFramework depends on lang-databinding
This reverts I0a813c806 and I69e38598, in addition to adding
lang-databinding as a test dependency to testFramework.

The only remaining dependency is android-plugin on lang-databinding.

Test: N/A
Bug: 117787529
Change-Id: Ie25fade4ed25b3576579b928d49c81ce33d7d72b

--- a/android-test-framework/BUILD
+++ b/android-test-framework/BUILD
@@ -25,6 +25,7 @@ iml_module(
         "//tools/idea/xml/xml-psi-api:intellij.xml.psi[module, test]",
         "//tools/idea:intellij.platform.jps.build_and_others[module, test]",
         "//tools/adt/idea/android:intellij.android.core[module, test]",
+        "//tools/adt/idea/android-lang-databinding:intellij.android.lang-databinding[module, test]",
         "//tools/adt/idea/android-common:intellij.android.common[module]",
         "//tools/base/testutils:studio.android.sdktools.testutils[module, test]",
         "//tools/idea/.idea/libraries:truth[test]",
