Move most of lang-databinding's src and gen files to intellij.android.lang-databinding
In order to remove the dependency of core on lang-databinding, extracted the two functions in DataBindingUtil that are causing circular dependency into a new extension point called DataBindingExpressionProvider. Its implementer is DataBindingLangExpressionProvider in lang-databinding.

Test: None
Bug: 117787529
Change-Id: Ie1921c5ba2a40252b261a7a89092b831bca909bb

--- a/designer/BUILD
+++ b/designer/BUILD
@@ -147,5 +147,6 @@ iml_module(
         "//tools/adt/idea/android-kotlin:intellij.android.kotlin.extensions[module, test]",
         "//tools/adt/idea/android-kotlin:intellij.android.kotlin.idea[module, test]",
         "//tools/adt/idea/android-kotlin:intellij.android.kotlin.output.parser[module, test]",
+        "//tools/adt/idea/android-lang-databinding:intellij.android.lang-databinding[module, test]",
     ],
 )
