Move databinding rename test out of android core
Fixes: 117947069
Test: updated
Change-Id: I3ff4a6ab5860e61203cb086113cb0a51f9fb7090

--- a/databinding/BUILD
+++ b/databinding/BUILD
@@ -57,5 +57,6 @@ iml_module(
         "//tools/idea:intellij.platform.jps.build_and_others[module, test]",
         "//tools/idea/platform/editor-ui-api:intellij.platform.editor[module, test]",
         "//tools/idea/platform/testFramework:intellij.platform.testFramework[module, test]",
+        "//tools/idea/.idea/libraries:truth[test]",
     ],
 )
