Move rest of lang-databinding to new module
A new extension point was created to extend the auto completion funcitonality to the new module. Now, data binding completion would not work without the plugin enabled.

Test: None
Bug: 117787529
Change-Id: Ib4f636466cc2bc95cbfc26f7b63104cfd8a49c0c

--- a/android-lang-databinding/BUILD
+++ b/android-lang-databinding/BUILD
@@ -32,6 +32,7 @@ iml_module(
         "//tools/idea/xml/xml-psi-api:intellij.xml.psi[module]",
         "//tools/idea/xml/dom-openapi:intellij.xml.dom[module]",
         "//tools/data-binding:studio.compilerCommon[module]",
+        "//tools/idea:intellij.java.impl[module]",
     ],
 )
 
