--- a/android/BUILD
+++ b/android/BUILD
@@ -34,6 +34,7 @@ iml_module(
         "//tools/idea/platform/credential-store:intellij.platform.credentialStore",
         "//tools/idea/jvm/jvm-analysis-impl:intellij.jvm.analysis.impl",
         "//tools/idea/java/compiler/instrumentation-util-8:intellij.java.compiler.instrumentationUtil.java8",
+        "//tools/idea/plugins/maven/error-prone-compiler:intellij.maven.errorProne.compiler",
         "//tools/idea/plugins/IntelliLang/intellilang-jps-plugin:intellij.java.langInjection.jps",
         "//tools/adt/idea/adt-branding:intellij.android.adt.branding",
     ],
@@ -49,7 +50,7 @@ iml_module(
         "//tools/idea/java/execution/openapi:intellij.java.execution[module]",
         "//tools/idea/platform/smRunner:intellij.platform.smRunner[module]",
         "//tools/idea/plugins/junit:intellij.junit[module]",
-        "//tools/idea/plugins/maven:intellij.maven[module]",
+        "//tools/idea/plugins/maven:intellij.maven_and_others[module]",
         "//tools/idea:intellij.java.impl[module]",
         "//tools/idea/plugins/properties:intellij.properties[module]",
         "//tools/idea/plugins/testng:intellij.testng[module]",
@@ -190,6 +191,7 @@ iml_module(
         "//tools/idea/platform/credential-store:intellij.platform.credentialStore",
         "//tools/idea/java/compiler/instrumentation-util-8:intellij.java.compiler.instrumentationUtil.java8",
         "//tools/idea/jvm/jvm-analysis-impl:intellij.jvm.analysis.impl",
+        "//tools/idea/plugins/maven/error-prone-compiler:intellij.maven.errorProne.compiler",
         "//tools/idea/plugins/IntelliLang/intellilang-jps-plugin:intellij.java.langInjection.jps",
     ],
     test_shard_count = 50,
