Move 4 super reliable Sanity UI tests to stable
CreateBasicKotlinProjectTest: fails 1 out of 3000 runs
CreateNewProjectWithCpp1Test: fails 1 out of 3000 runs
CreateNewProjectWithCpp2Test: fails 1 out of 3000 runs
CreateNewProjectWithCpp3Test: fails 0 out of 3000 runs
Test results can be found here:
https://source.cloud.google.com/results/invocations/aeb97f0d-0454-46b7-bcba-3e0941e30755

bug: 116752977

Test: Ran these tests with Bazel remotely for 3000 times
Change-Id: I07514c93af3bff6af438a7d3850be7ae34085ebd

--- a/android-uitests/BUILD
+++ b/android-uitests/BUILD
@@ -300,7 +300,7 @@ java_test(
     jvm_flags = ["-Dtest.suite.class=com.android.tools.idea.tests.gui.java8.CompileWithJava8Test"],
     tags = COMMON_TAGS + [
         "no_psq",
-        "qa_sanity",
+        "qa_sanity",  # fails 0 out of 3000 runs
     ],
     test_class = "com.android.tools.idea.tests.gui.GuiJarTestSuite",
     runtime_deps = [":intellij.android.guiTests_testlib"],
@@ -606,8 +606,7 @@ java_test(
     ],
     tags = COMMON_TAGS + [
         "no_psq",
-        "qa_sanity",
-        "qa_unreliable",  #b/116752977
+        "qa_sanity",  # fails 1 out of 3000 runs
     ],
     test_class = "com.android.tools.idea.tests.gui.GuiJarTestSuite",
     runtime_deps = [":intellij.android.guiTests_testlib"],
@@ -641,8 +640,7 @@ java_test(
     jvm_flags = ["-Dtest.suite.class=com.android.tools.idea.tests.gui.npw.CreateNewProjectWithCpp1Test"],
     tags = COMMON_TAGS + [
         "no_psq",
-        "qa_sanity",
-        "qa_unreliable",  #b/116752977
+        "qa_sanity",  # fails 1 out of 3000 runs
     ],
     test_class = "com.android.tools.idea.tests.gui.GuiJarTestSuite",
     runtime_deps = [":intellij.android.guiTests_testlib"],
@@ -657,8 +655,7 @@ java_test(
     jvm_flags = ["-Dtest.suite.class=com.android.tools.idea.tests.gui.npw.CreateNewProjectWithCpp2Test"],
     tags = COMMON_TAGS + [
         "no_psq",
-        "qa_sanity",
-        "qa_unreliable",  #b/116752977
+        "qa_sanity",  # fails 1 out of 3000 runs
     ],
     test_class = "com.android.tools.idea.tests.gui.GuiJarTestSuite",
     runtime_deps = [":intellij.android.guiTests_testlib"],
@@ -673,8 +670,7 @@ java_test(
     jvm_flags = ["-Dtest.suite.class=com.android.tools.idea.tests.gui.npw.CreateNewProjectWithCpp3Test"],
     tags = COMMON_TAGS + [
         "no_psq",
-        "qa_sanity",
-        "qa_unreliable",  #b/116752977
+        "qa_sanity",  # fails 0 out of 3000 runs
     ],
     test_class = "com.android.tools.idea.tests.gui.GuiJarTestSuite",
     runtime_deps = [":intellij.android.guiTests_testlib"],
