--- a/apkanalyzer/BUILD
+++ b/apkanalyzer/BUILD
@@ -26,7 +26,7 @@ iml_module(
         "//tools/idea/platform/editor-ui-api:intellij.platform.editor[module]",
         "//tools/idea/platform/platform-api:intellij.platform.ide[module]",
         "//tools/idea/.idea/libraries:Guava",
-        "//tools/idea/.idea/libraries:aapt-proto-jarjar",
+        "//tools/idea/.idea/libraries:aapt-proto",
         "//tools/idea/platform/platform-impl:intellij.platform.ide.impl[module]",
         "//tools/base/apkparser/analyzer:studio.android.sdktools.analyzer[module]",
         "//tools/base/common:studio.android.sdktools.common[module]",
