Uses the new tracing API
Also forwards the Tracing jvm flags to gradle (both sync and build)

Nit: fixes an event that was opened but not closed

Test: N/A
Bug: N/A
Change-Id: Ibf3cb69395098510de3bd186cb95d3125cbc7396

--- a/android/BUILD
+++ b/android/BUILD
@@ -134,6 +134,7 @@ iml_module(
         "//tools/idea/.idea/libraries:kotlin-plugin",
         "//tools/idea/.idea/libraries:Java_Compatibility",
         "//tools/idea/.idea/libraries:kotlin-gradle-plugin-model",
+        "//tools/base/tracer:studio.android.sdktools.tracer[module]",
     ],
 )
 
@@ -348,6 +349,7 @@ filegroup(
         "//tools/adt/idea/swingp:swing-instrumenter_deploy.jarjar.jar",
         "//tools/base/build-system:gradle-api_neverlink",  # Provided when run in Gradle.
         "//tools/base/third_party/kotlin:kotlin-m2repository.zip",
+        "//tools/base/tracer:trace_agent",
     ],
 )
 
