Fix scoping of AndroidTestPackage
For some reason it was only including unit tests that would have been
excluded from android tests, instead of expressing the idea directly and
excluding what should be excluded from unit tests. One bug caused by
this was skipping all tests from non-Android modules, there may be more
I didn't think of.

Bug: 117796743
Test: AndroidTestAndJUnitConfigurationConflictsTest
Change-Id: Icb488cac9beed051d2f69a7b9065617c18497324

--- a/android/testData/projects/unitTesting/util-lib/build.gradle
+++ b/android/testData/projects/unitTesting/util-lib/build.gradle
@@ -16,4 +16,5 @@ android {
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation "junit:junit:4.12"
 }
