Switch constraint layout deps.
To use the prebuilt m2 repository rather than the sdk extras repository.

Bug: 117646654
Test: existing bazel tests.
Change-Id: Ibd995d61748bea83e91378d47df157972f91fa4b

--- a/android/BUILD
+++ b/android/BUILD
@@ -153,7 +153,6 @@ iml_module(
         "//prebuilts/studio/layoutlib:data/res",
         "//prebuilts/studio/sdk:build-tools/latest",
         "//prebuilts/studio/sdk:cmake",
-        "//prebuilts/studio/sdk:constraint-layout_latest",
         "//prebuilts/studio/sdk:docs",
         "//prebuilts/studio/sdk:licenses",
         "//prebuilts/studio/sdk:ndk-bundle",
@@ -426,7 +425,9 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.0.2:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.1.3:jar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.1.3:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/design/27.1.1:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/leanback-v17/27.1.1:aar",
