--- a/android/BUILD
+++ b/android/BUILD
@@ -424,63 +424,84 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0-alpha1:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.0.2:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/26.0.2:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/asynclayoutinflater/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/cardview-v7/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/collections/28.0.0:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.0.2:jar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.1.0:jar",  # required by com.android.support:wear:28.0.0
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.1.3:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.0.2:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.1.0:aar",  # required by com.android.support:wear:28.0.0
         "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.1.3:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/design/27.1.1:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/leanback-v17/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/coordinatorlayout/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/cursoradapter/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/customview/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/design/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/documentfile/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/drawerlayout/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/interpolator/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/leanback-v17/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/loader/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/localbroadcastmanager/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/multidex/1.0.1:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/palette-v7/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/percent/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/percent/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/print/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/recyclerview-v7/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/recyclerview-v7/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/slidingpanelayout/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/25.4.0:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.0.2:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.1.0:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/27.1.1:jar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/28.0.0:jar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/27.1.1:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.1.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v13/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v13/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-v13/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-v13/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.1.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/26.0.2:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/swiperefreshlayout/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-core/3.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-idling-resource/3.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/test/monitor/1.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/test/rules/1.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/test/runner/1.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/transition/26.1.0:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/transition/27.1.1:aar",
-        "//prebuilts/tools/common/m2/repository/com/android/support/wear/27.1.1:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/transition/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/versionedparcelable/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/viewpager/28.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/com/android/support/wear/28.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/github/bumptech/glide/glide/3.8.0:jar",
         "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-ads-license/12.0.1:aar",
         "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-ads-lite-license/12.0.1:aar",
