--- a/android/BUILD
+++ b/android/BUILD
@@ -384,44 +384,44 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/db/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/room/common/1.0.0:jar",
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/room/runtime/1.0.0:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.0.0-alpha1:jar",
-        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.0.0-alpha1:jar",
-        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/asynclayoutinflater/asynclayoutinflater/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/cardview/cardview/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.0.0-alpha1:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.0.0:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.0.2:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.0.0:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/asynclayoutinflater/asynclayoutinflater/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/cardview/cardview/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.0.0:jar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.3:jar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.3:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/coordinatorlayout/coordinatorlayout/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/cursoradapter/cursoradapter/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/customview/customview/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/documentfile/documentfile/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/drawerlayout/drawerlayout/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/interpolator/interpolator/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-ui/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-utils/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.0.0-alpha1:jar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-compiler/2.0.0-alpha1:jar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/loader/loader/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/localbroadcastmanager/localbroadcastmanager/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/print/print/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/recyclerview/recyclerview/1.0.0-alpha1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/coordinatorlayout/coordinatorlayout/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/cursoradapter/cursoradapter/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/customview/customview/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/documentfile/documentfile/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/drawerlayout/drawerlayout/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/interpolator/interpolator/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-ui/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-utils/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.0.0:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/loader/loader/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/localbroadcastmanager/localbroadcastmanager/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/print/print/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/recyclerview/recyclerview/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/slice/slice-builders/1.0.0-alpha1:aar",
         "//prebuilts/tools/common/m2/repository/androidx/slice/slice-core/1.0.0-alpha1:aar",
         "//prebuilts/tools/common/m2/repository/androidx/slice/slice-view/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/slidingpanelayout/slidingpanelayout/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/swiperefreshlayout/swiperefreshlayout/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/transition/transition/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.0.0-alpha1:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0-alpha1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/slidingpanelayout/slidingpanelayout/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/swiperefreshlayout/swiperefreshlayout/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/transition/transition/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.0.1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/28.0.0:aar",
@@ -530,7 +530,7 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-tasks/12.0.1:aar",
         "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-tasks/16.0.1:aar",
         "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-wearable/16.0.1:aar",
-        "//prebuilts/tools/common/m2/repository/com/google/android/material/material/1.0.0-beta01:aar",
+        "//prebuilts/tools/common/m2/repository/com/google/android/material/material/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/google/android/support/wearable/2.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/google/android/things/androidthings/0.4-devpreview:jar",
         "//prebuilts/tools/common/m2/repository/com/google/android/things/contrib/driver-apa102/0.3:aar",
