Revert: Ignores SettingsActivity template tests
Re-enabled as TemplateTest now supports AndroidX dependencies
and is running against API 28

Bug: b/112467616
Bug: b/112586796
Test: TemplateTest
Change-Id: I2b9709226c8609201fdb86976d5b9fd2520e9583

--- a/android/BUILD
+++ b/android/BUILD
@@ -384,6 +384,7 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/db/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/room/common/1.0.0:jar",
         "//prebuilts/tools/common/m2/repository/android/arch/persistence/room/runtime/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.0.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.0.0:jar",
         "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.0.2:aar",
         "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.0.0:jar",
@@ -394,12 +395,15 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.3:jar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.3:aar",
         "//prebuilts/tools/common/m2/repository/androidx/coordinatorlayout/coordinatorlayout/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/core/core-ktx/1.0.1:aar",
         "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/cursoradapter/cursoradapter/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/customview/customview/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/documentfile/documentfile/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/drawerlayout/drawerlayout/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/interpolator/interpolator/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-ui/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-utils/1.0.0:aar",
@@ -410,6 +414,7 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/loader/loader/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/localbroadcastmanager/localbroadcastmanager/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/preference/preference/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/print/print/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/recyclerview/recyclerview/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/slice/slice-builders/1.0.0-alpha1:aar",
@@ -421,6 +426,7 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.0.1:aar",
         "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.0.2:aar",
@@ -575,6 +581,8 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-android-aar/1.2.3:aar",
         "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-core/1.2.2:jar",
         "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-core/1.2.3:jar",
+        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib-common/1.2.50:jar",
+        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-stdlib/1.2.50:jar",
         "//prebuilts/tools/common/m2/repository/org/mockito/mockito-core/2.7.1:jar",
         "//prebuilts/tools/common/m2/repository/org/objenesis/objenesis/2.5:jar",
         "//prebuilts/tools/common/m2/repository/org/slf4j/slf4j-api/1.7.2:jar",
