TemplateTest: Test AndroidX template support
Bug: 112467616
Test: TemplateTest
Change-Id: Idf21102cb8e42392b0c1c3ee6981de587446174d

--- a/uitest-framework/BUILD
+++ b/uitest-framework/BUILD
@@ -63,12 +63,12 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.2:aar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.2:jar",
-        "//prebuilts/tools/common/m2/repository/androidx/leanback/leanback/1.0.0-alpha1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/leanback/leanback/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-v4/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/media/media/1.0.0:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/percentlayout/percentlayout/1.0.0-alpha1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/percentlayout/percentlayout/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/recyclerview/recyclerview/1.0.0:aar",
-        "//prebuilts/tools/common/m2/repository/androidx/wear/wear/1.0.0-alpha3:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/wear/wear/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-core/3.1.0-alpha3:aar",
         "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-idling-resource/3.1.0-alpha3:aar",
         "//prebuilts/tools/common/m2/repository/androidx/test/monitor/1.1.0-alpha3:aar",
