--- a/android/BUILD
+++ b/android/BUILD
@@ -392,10 +392,13 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/asynclayoutinflater/asynclayoutinflater/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/cardview/cardview/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.0.0:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.0:jar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.3:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.3:aar",
         "//prebuilts/tools/common/m2/repository/androidx/coordinatorlayout/coordinatorlayout/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/core/core-ktx/1.0.1:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.1:aar",
         "//prebuilts/tools/common/m2/repository/androidx/core/core/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/cursoradapter/cursoradapter/1.0.0:aar",
@@ -405,15 +408,24 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/interpolator/interpolator/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/leanback/leanback/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-ui/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-utils/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-v13/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-v4/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.0.0:jar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-extensions/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-process/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-service/2.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-ktx/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/loader/loader/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/localbroadcastmanager/localbroadcastmanager/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/media/media/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/percentlayout/percentlayout/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/preference/preference/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/print/print/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/recyclerview/recyclerview/1.0.0:aar",
@@ -428,6 +440,7 @@ maven_repo(
         "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.0-alpha01:aar",
         "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0:aar",
+        "//prebuilts/tools/common/m2/repository/androidx/wear/wear/1.0.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/25.4.0:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.0.2:aar",
         "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/28.0.0:aar",
