Disables test that are not passing on windows
With this change //tools/adt/... can be run on windows RBE.

Test: existing
Bug: 121280256
Change-Id: Ia38d6552a7a4b64cdb87529bffe22eed5cbfa81f

--- a/adt-ui/BUILD
+++ b/adt-ui/BUILD
@@ -6,6 +6,7 @@ iml_module(
     srcs = ["src/main/java"],
     iml_files = ["intellij.android.adt.ui.iml"],
     resources = ["resources"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.adtui.AdtUiTestSuite",
     test_resources = ["src/test/resources"],
     # do not sort: must match IML order
