--- a/android-adb/BUILD
+++ b/android-adb/BUILD
@@ -22,6 +22,7 @@ iml_module(
 iml_module(
     name = "intellij.android.adb.tests",
     iml_files = ["intellij.android.adb.tests.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.adb.AndroidAdbTestSuite",
     test_data = ["//prebuilts/studio/sdk:platform-tools"],
     # do not sort: must match IML order
