--- a/assistant/BUILD
+++ b/assistant/BUILD
@@ -37,6 +37,7 @@ iml_module(
 iml_module(
     name = "assistant-test",
     iml_files = ["assistant-test.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.assistant.view.AssistantTestSuite",
     # keep sorted
     test_data = [
