--- a/profilers-android/BUILD
+++ b/profilers-android/BUILD
@@ -5,6 +5,7 @@ iml_module(
     name = "intellij.android.profilersAndroid",
     srcs = ["src"],
     iml_files = ["intellij.android.profilersAndroid.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.profilers.ProfilersAndroidTestSuite",
     test_resources = ["testResources"],
     test_srcs = ["testSrc"],
