--- a/project-system-gradle/BUILD
+++ b/project-system-gradle/BUILD
@@ -40,6 +40,7 @@ iml_module(
 iml_module(
     name = "intellij.android.projectSystem.gradle.tests",
     iml_files = ["intellij.android.projectSystem.gradle.tests.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.projectsystem.GradleProjectSystemTestSuite",
     test_data = [
         "//prebuilts/studio/jdk",
