--- a/project-system/BUILD
+++ b/project-system/BUILD
@@ -41,6 +41,7 @@ iml_module(
 iml_module(
     name = "intellij.android.projectSystem.tests",
     iml_files = ["intellij.android.projectSystem.tests.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.projectsystem.ProjectSystemTestSuite",
     # do not sort: must match IML order
     test_runtime_deps = [
