--- a/uitest-framework/BUILD
+++ b/uitest-framework/BUILD
@@ -6,6 +6,7 @@ iml_module(
     name = "intellij.android.guiTestFramework",
     srcs = ["src"],
     iml_files = ["intellij.android.guiTestFramework.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.tests.gui.framework.GuiTestFrameworkTestSuite",
     test_srcs = ["testSrc"],
     visibility = ["//visibility:public"],
