--- a/whats-new-assistant/BUILD
+++ b/whats-new-assistant/BUILD
@@ -38,6 +38,7 @@ iml_module(
 iml_module(
     name = "whats-new-assistant-test",
     iml_files = ["whats-new-assistant-test.iml"],
+    tags = ["no_test_windows"],
     test_class = "com.android.tools.idea.whatsnew.assistant.WhatsNewAssistantTestSuite",
     test_data = [
         "//prebuilts/studio/sdk:platforms/latest",
