Adding tool window for new layout inspector
Test: none
Bug: 122274789
Change-Id: I3e975b4e418ac45402d46641e9033af7af775589

--- a/android-plugin/BUILD
+++ b/android-plugin/BUILD
@@ -36,5 +36,6 @@ iml_module(
         "//tools/adt/idea/android-lang-databinding:intellij.android.lang-databinding[module]",
         "//tools/adt/idea/databinding:intellij.android.databinding[module]",
         "//tools/adt/idea/naveditor:intellij.android.naveditor[module]",
+        "//tools/adt/idea/layout-inspector:intellij.android.layout-inspector[module]",
     ],
 )
