--- a/android-plugin/src/META-INF/plugin.xml
+++ b/android-plugin/src/META-INF/plugin.xml
@@ -26,4 +26,5 @@
   <xi:include href="/META-INF/assistant.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="/META-INF/connection-assistant.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="/META-INF/whats-new-assistant.xml" xpointer="xpointer(/idea-plugin/*)"/>
+  <xi:include href="/META-INF/layout-inspector.xml" xpointer="xpointer(/idea-plugin/*)"/>
 </idea-plugin>
