Renaming perfd to transport due to refactor of pipeline.
Test: Updated
Bug: 122659360
Change-Id: I616dbd9923d4afdb31c9e8a468235cacf4fa34b9

--- a/android/BUILD
+++ b/android/BUILD
@@ -297,7 +297,7 @@ filegroup(
             "//tools/base/profiler/app:perfa.jar",
             "//tools/base/profiler/app:perfa_okhttp.dex",
             "//tools/base/profiler/native/perfa:android",
-            "//tools/base/profiler/native/perfd:android",
+            "//tools/base/transport:android",
             "//tools/base/profiler/transform:profilers-transform.jar",
         ],
     }),
