Lint check: Deprecated Gradle configuration use.
See tools/base I7a43372a2be25151b77b176550d08839f4314f6a

Bug: 122727153
Test: Added new cases to LintIdeGradleDetectorTest
Change-Id: I4fe7e7c611027e5e66b643f0fa21c31d322fa0b3

--- a/android/resources/messages/AndroidBundle.properties
+++ b/android/resources/messages/AndroidBundle.properties
@@ -615,6 +615,7 @@ android.lint.inspections.google.app.indexing.warning=Missing support for Firebas
 android.lint.inspections.gradle.compatible=Incompatible Gradle Versions
 android.lint.inspections.gradle.dependency=Obsolete Gradle Dependency
 android.lint.inspections.gradle.deprecated=Deprecated Gradle Construct
+android.lint.inspections.gradle.deprecated.configuration=Deprecated Gradle Configuration
 android.lint.inspections.gradle.dynamic.version=Gradle Dynamic Version
 android.lint.inspections.gradle.getter=Gradle Implicit Getter Call
 android.lint.inspections.gradle.ide.error=Gradle IDE Support Issues
